pushed the handle total action up the call stack