@@ -1,6 +1,7 @@
 package ca.jbrains.pos.test;
 
 import ca.jbrains.pos.FormatMonetaryAmount;
+import ca.jbrains.pos.HandleTotal;
 import ca.jbrains.pos.PointOfSale;
 import ca.jbrains.pos.Purchase;
 import ca.jbrains.pos.domain.Catalog;
@@ -16,6 +17,7 @@ import java.util.stream.Collectors;
 
 // REFACTOR: Replace with focused tests for parsing commands in handleLine
 public class PurchaseTest {
+
     @Test
     void oneItem() {
         Catalog catalog = new PriceFoundCatalog(795);
@@ -23,22 +25,29 @@ public class PurchaseTest {
         // SMELL Duplicates logic in PointOfSale.runApplication(): stream lines, handle each line, consume the result
         Assertions.assertEquals(
                 List.of("CAD 7.95", "Total: CAD 7.95"),
-                List.of("12345", "total").stream().map(line -> PointOfSale.handleLine(line, catalog, new PurchaseAccumulator() {
-                    @Override
-                    public Option<Purchase> completePurchase() {
-                        return Option.some(new Purchase(795, Collections.emptyList()));
-                    }
+                List.of("12345", "total").stream().map(line -> {
+                    final PurchaseAccumulator purchaseAccumulator = new PurchaseAccumulator() {
+                        @Override
+                        public Option<Purchase> completePurchase() {
+                            return Option.some(new Purchase(795, Collections.emptyList()));
+                        }
 
-                    @Override
-                    public void addPriceOfScannedItemToCurrentPurchase(int price) {
-                    }
+                        @Override
+                        public void addPriceOfScannedItemToCurrentPurchase(int price) {
+                        }
 
-                    @Override
-                    public boolean isPurchaseInProgress() {
-                        return false;
-                    }
+                        @Override
+                        public boolean isPurchaseInProgress() {
+                            return false;
+                        }
 
-                }, new FormatMonetaryAmount(new Locale("en", "US")), null)).collect(Collectors.toList()));
+                    };
+                    final FormatMonetaryAmount formatMonetaryAmount = new FormatMonetaryAmount(
+                            new Locale("en", "US"));
+                    return PointOfSale.handleLine(line, catalog,
+                            purchaseAccumulator, formatMonetaryAmount, null,
+                            new HandleTotal(purchaseAccumulator, formatMonetaryAmount));
+                }).collect(Collectors.toList()));
     }
 
     @Test
@@ -46,23 +55,32 @@ public class PurchaseTest {
         Catalog catalog = new PriceFoundCatalog(995);
 
         // SMELL Duplicates logic in PointOfSale.runApplication(): stream lines, handle each line, consume the result
-        Assertions.assertEquals(
-                List.of("CAD 9.95", "Total: CAD 9.95"),
-                List.of("12345", "total").stream().map(line -> PointOfSale.handleLine(line, catalog, new PurchaseAccumulator() {
-                    @Override
-                    public Option<Purchase> completePurchase() {
-                        return Option.some(new Purchase(995, Collections.emptyList()));
-                    }
+      Assertions.assertEquals(
+              List.of("CAD 9.95", "Total: CAD 9.95"),
+              List.of("12345", "total").stream().map(line ->
+              {
+                final PurchaseAccumulator purchaseAccumulator = new PurchaseAccumulator() {
+                  @Override
+                  public Option<Purchase> completePurchase() {
+                    return Option.some(new Purchase(995, Collections.emptyList()));
+                  }
 
-                    @Override
-                    public void addPriceOfScannedItemToCurrentPurchase(int price) {
-                    }
+                  @Override
+                  public void addPriceOfScannedItemToCurrentPurchase(int price) {
+                  }
 
-                    @Override
-                    public boolean isPurchaseInProgress() {
-                        return true;
-                    }
+                  @Override
+                  public boolean isPurchaseInProgress() {
+                    return true;
+                  }
 
-                }, new FormatMonetaryAmount(new Locale("en", "US")), null)).collect(Collectors.toList()));
+                };
+
+                final FormatMonetaryAmount formatMonetaryAmount = new FormatMonetaryAmount(
+                        new Locale("en", "US"));
+                return PointOfSale.handleLine(line, catalog,
+                        purchaseAccumulator, formatMonetaryAmount, null,
+                        new HandleTotal(purchaseAccumulator, formatMonetaryAmount));
+              }).collect(Collectors.toList()));
     }
 }
